postcss/testData/inspections/customSelectors/emptyCustomSelectorName.pcss
@custom-selector <error descr="Custom selector name should not be empty">:--</error> h1, h2, h3;